@startuml Polyclinic_Domain_Model

' Configuración del diagrama
skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam backgroundColor #FEFEFE
skinparam class {
    BackgroundColor<<Entity>> LightBlue
    BackgroundColor<<Identity>> LightYellow
    BorderColor Black
    ArrowColor Black
}

' ========== ENTIDADES ==========

class ConsultationDerivation <<Entity>> {
    {field} ConsultationDerivationId: Guid <<PK>>
    - DateTimeCDer: DateTime
    - DepartmentHeadId: Guid <<FK>>
    - DerivationId: Guid <<FK>>
    - Diagnosis: string
    - DoctorId: Guid <<FK>>
}

class ConsultationReferral <<Entity>> {
    {field} ConsultationReferralId: Guid <<PK>>
    - DateTimeCRem: DateTime
    - DepartmentHeadId: Guid <<FK>>
    - Diagnosis: string
    - DoctorId: Guid <<FK>>
    - ReferralId: Guid <<FK>>
}

class Department <<Entity>> {
    {field} DepartmentId: Guid <<PK>>
    - Name: string
}

class DepartmentHead <<Entity>> {
    {field} DepartmentHeadId: Guid <<PK>>
    - AssignedAt: DateTime
    - DepartmentId: Guid <<FK>>
    - DoctorId: Guid <<FK>>
}

class Derivation <<Entity>> {
    {field} DerivationId: Guid <<PK>>
    - DateTimeDer: DateTime
    - DepartmentFromId: Guid <<FK>>
    - DepartmentToId: Guid <<FK>>
    - PatientId: Guid <<FK>>
}

class Doctor <<Entity>> {
    {field} EmployeeId: Guid <<PK>> <<FK>>
    - DepartmentId: Guid <<FK>>
    - EmploymentStatus: string
    - Identification: string
    - Name: string
    - UserId: string? <<FK>>
}

class EmergencyRoom <<Entity>> {
    {field} EmergencyRoomId: Guid <<PK>>
    - DoctorId: Guid <<FK>>
    - GuardDate: DateOnly
}

class EmergencyRoomCare <<Entity>> {
    {field} EmergencyRoomCareId: Guid <<PK>>
    - CareDate: DateTime
    - Diagnosis: string
    - EmergencyRoomId: Guid <<FK>>
    - PatientId: Guid <<FK>>
}

class Employee <<Entity>> {
    {field} EmployeeId: Guid <<PK>> <<FK>>
    - EmploymentStatus: string
    - Identification: string
    - Name: string
    - UserId: string? <<FK>>
}

class ExternalMedicalPost <<Entity>> {
    {field} ExternalMedicalPostId: Guid <<PK>>
    - Name: string
}

class Medication <<Entity>> {
    {field} MedicationId: Guid <<PK>>
    - BatchNumber: string
    - CommercialCompany: string
    - CommercialName: string
    - ExpirationDate: DateOnly
    - Format: string
    - MaxQuantityNurse: int
    - MaxQuantityWarehouse: int
    - MinQuantityNurse: int
    - MinQuantityWarehouse: int
    - QuantityNurse: int
    - QuantityWarehouse: int
    - ScientificName: string
}

class MedicationDerivation <<Entity>> {
    {field} MedicationDerivationId: Guid <<PK>>
    - ConsultationDerivationId: Guid <<FK>>
    - MedicationId: Guid <<FK>>
    - Quantity: int
}

class MedicationEmergency <<Entity>> {
    {field} MedicationEmergencyId: Guid <<PK>>
    - EmergencyRoomCareId: Guid <<FK>>
    - MedicationId: Guid <<FK>>
    - Quantity: int
}

class MedicationReferral <<Entity>> {
    {field} MedicationReferralId: Guid <<PK>>
    - ConsultationReferralId: Guid <<FK>>
    - MedicationId: Guid <<FK>>
    - Quantity: int
}

class MedicationRequest <<Entity>> {
    {field} MedicationRequestId: Guid <<PK>>
    - MedicationId: Guid <<FK>>
    - Quantity: int
    - WarehouseRequestId: Guid <<FK>>
}

class Nurse <<Entity>> {
    {field} EmployeeId: Guid <<PK>> <<FK>>
    - EmploymentStatus: string
    - Identification: string
    - Name: string
    - UserId: string? <<FK>>
}

class Patient <<Entity>> {
    {field} PatientId: Guid <<PK>>
    - Address: string
    - Age: int
    - Contact: string
    - Identification: string
    - Name: string
    - UserId: string? <<FK>>
}

class Referral <<Entity>> {
    {field} ReferralId: Guid <<PK>>
    - DateTimeRem: DateTime
    - DepartmentToId: Guid <<FK>>
    - ExternalMedicalPostId: Guid <<FK>>
    - PatientId: Guid <<FK>>
}

class StockDepartment <<Entity>> {
    {field} StockDepartmentId: Guid <<PK>>
    - DepartmentId: Guid <<FK>>
    - MaxQuantity: int
    - MedicationId: Guid <<FK>>
    - MinQuantity: int
    - Quantity: int
}

class WarehouseManager <<Entity>> {
    {field} EmployeeId: Guid <<PK>> <<FK>>
    - AssignedAt: DateTime
    - EmploymentStatus: string
    - Identification: string
    - Name: string
    - UserId: string? <<FK>>
}

class WarehouseRequest <<Entity>> {
    {field} WarehouseRequestId: Guid <<PK>>
    - DepartmentId: Guid <<FK>>
    - RequestDate: DateTime
    - Status: string
    - WarehouseManagerId: Guid <<FK>>
}


' ========== RELACIONES ==========

ConsultationDerivation "1" --> "*" MedicationDerivation : MedicationDerivations
ConsultationReferral "1" --> "*" MedicationReferral : MedicationReferrals
Department "1" --> "*" DepartmentHead : DepartmentHeads
Department "1" --> "*" Derivation : DerivationsFrom
Department "1" --> "*" Derivation : DerivationsTo
Department "1" --> "*" Doctor : Doctors
Department "1" --> "*" Referral : Referrals
Department "1" --> "*" StockDepartment : StockDepartments
Department "1" --> "*" WarehouseRequest : WarehouseRequests
DepartmentHead "1" --> "*" ConsultationDerivation : ConsultationDerivations
DepartmentHead "1" --> "*" ConsultationReferral : ConsultationReferrals
DepartmentHead "1" --> "*" WarehouseRequest : WarehouseRequests
Derivation "1" --> "*" ConsultationDerivation : ConsultationDerivations
Doctor "1" --> "*" ConsultationDerivation : ConsultationDerivations
Doctor "1" --> "*" ConsultationReferral : ConsultationReferrals
Doctor "1" --> "*" DepartmentHead : DepartmentHeads
Doctor "1" --> "*" EmergencyRoom : EmergencyRooms
EmergencyRoom "1" --> "*" EmergencyRoomCare : EmergencyRoomCares
EmergencyRoomCare "1" --> "*" MedicationEmergency : MedicationEmergencies
Medication "1" --> "*" MedicationDerivation : MedicationDerivations
Medication "1" --> "*" MedicationEmergency : MedicationEmergencies
Medication "1" --> "*" MedicationReferral : MedicationReferrals
Medication "1" --> "*" MedicationRequest : MedicationRequests
Medication "1" --> "*" StockDepartment : StockDepartments
Patient "1" --> "*" ConsultationDerivation : ConsultationDerivations
Patient "1" --> "*" ConsultationReferral : ConsultationReferrals
Patient "1" --> "*" Derivation : Derivations
Patient "1" --> "*" EmergencyRoomCare : EmergencyRoomCares
Patient "1" --> "*" Referral : Referrals
Referral "1" --> "*" ConsultationReferral : ConsultationReferrals
WarehouseManager "1" --> "*" WarehouseRequest : WarehouseRequests
WarehouseRequest "1" --> "*" MedicationRequest : MedicationRequests

@enduml
